--- a/pages/index.css
+++ b/pages/index.css
@@ -1,2 +1,3 @@
 @import url(../vendor/normalize.css);
 @import url(../blocks/page/page.css);
+@import url(../blocks/page/header/__logo/header__logo.css);
