--- a/pages/index.css
+++ b/pages/index.css
@@ -1,3 +1,166 @@
-@import url(../vendor/normalize.css);
-@import url(../blocks/page/page.css);
-@import url(../blocks/page/header/__logo/header__logo.css);
+/*написать весь код для 1280 потом для меньших версий его раскидать по папкам и подключить ключи*/
+.page {
+    background-color: #2A2C2F;
+    height: 6875px;
+    max-width: 1280px; /*header выходит за рамки почему-то*/
+    font-family: "Inter", "Arial", sans-serif;
+    margin: 0 auto;
+    box-sizing: border-box;
+}
+
+.header {
+    border: 2px solid red;
+    height: 136px;
+}
+.header__logo {
+    position: relative;
+    width: 176px;
+    height: 52px;
+    top: 28px;
+    right: 1056px;
+    bottom: 6795px;
+    left: 48px;
+    background: #2A2C2F;
+    }
+.header__lang-link {
+    position: relative; /*доп паддинги появляются*/
+    height: 28px;
+    width: 30px;
+    margin-top: 46px;
+    /*margin-right: 95px;*/
+    margin-left: 1155px;
+    border-radius: 0px;
+    color: #FFFFFF;
+font-family: 'Inter';
+font-size: 24px;
+font-weight: 400;
+line-height: 28px;
+letter-spacing: 0em;
+text-align: right;
+text-decoration: underline;
+}
+.header__lang-link:last-child {
+    width: 29px;
+    /*margin-left: 1203px;*/
+    margin-left: 18px;
+    text-decoration: none;
+}
+
+.lead {
+    border: 2px solid red;
+}
+.lead__title {
+    position: relative;
+    /*box-sizing: border-box; cбоку торчит еще маржин*/
+    height: 200px;
+    width: 720px;
+    margin-top: 0px;
+    margin-right: 280px;
+    margin-bottom: 0px;
+    margin-left: 280px;
+    border-radius: 0px;
+    font-family: 'Inter';
+font-style: normal;
+font-weight: 900;
+font-size: 96px;
+line-height: 100px;
+/* or 104% */
+text-align: center;
+color: #FFFFFF;
+}
+.lead__subtitle {
+position: relative;
+margin: 0px;
+width: 640px;
+height: 72px;
+margin-top: 32px;
+margin-right: 320px;
+margin-bottom: 0px;
+margin-left: 320px;
+font-family: 'Inter';
+font-style: normal;
+font-weight: 400;
+font-size: 30px;
+line-height: 36px;
+/* or 120% */
+text-align: center;
+color: #FFFFFF;
+}
+.lead__image {
+    position: relative;
+    width: 984px;
+    height: 615px;
+    margin-top: 64px;
+    margin-right: 148px;
+    margin-bottom: 0px;
+    margin-left: 148px;
+/* через бэекграунд вставить картинку background: url(kalegin-michail-179870-unsplash.jpg);*/
+}
+.lead__caption {
+position: relative;
+width: 158px;
+height: 14px;
+white-space: nowrap; /*текст в одну строку встал*/
+margin-top: 8px;
+margin-bottom: 0px;
+margin-left: 148px;
+font-family: 'Inter';
+font-style: normal;
+font-weight: 400;
+font-size: 10px;
+line-height: 14px;
+/* identical to box height, or 140% */
+letter-spacing: 1.5px;
+text-transform: uppercase;
+color: #FFFFFF;
+}
+
+.intro {
+border: 2px solid red;
+margin: 0;
+}
+.intro__title {
+position: relative;
+width: 690px;
+height: 58px;
+margin-top: 92px;
+margin-left: 148px;
+font-family: 'Inter';
+font-style: normal;
+font-weight: 900;
+font-size: 54px;
+line-height: 58px;
+/* identical to box height, or 107% */
+color: #FFFFFF;
+}
+.intro__text {
+    position: absolute;
+    width: 690px;
+    height: 208px;
+    margin-top: 40px;
+    margin-left: 148px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 163%;
+    /* or 26px */
+    color: #FFFFFF;
+}
+.intro__list { /*цифры не должны быть жирные ОШИБКА*/
+position: relative;
+width: 690px;
+height: 90px;
+padding: 0px;
+margin-top: 281px;
+margin-left: 148px;
+margin-bottom: 0px;
+font-family: 'Inter';
+font-style: normal;
+font-weight: 700;
+font-size: 12px;
+line-height: 18px;
+/* or 150% */
+color: #FFFFFF;
+list-style: none;
+}
