--- a/pages/index.css
+++ b/pages/index.css
@@ -316,23 +316,28 @@ color: #FFFFFF;
 
 .cover {
 border: 2px solid green;
+max-width: 1184px;
+max-height: 740px;
+margin: 0px 48px 0px 48px;
 }
 .cover__title {
+    border: 2px solid green;
     position: relative;
     z-index: 1;
     width: 560px;
     height: 152px;
-    margin: 245px 312px 0px 312px;
+    padding: 245px 312px 0px 312px;
+    margin: 0px;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 900;
     font-size: 72px;
     line-height: 76px;
-    /* or 106% */
     text-align: center;
     color: #FFFFFF;
 }
 .cover__subtitle {
+    border: 2px solid green;
     position: relative;
     z-index: 1;
     width: 360px;
@@ -344,23 +349,91 @@ border: 2px solid green;
     font-weight: 400;
     font-size: 18px;
     line-height: 22px;
-    /* or 122% */
     text-align: center;
     color: #FFFFFF;
 }
-.cover__overlay {
+.cover__overlay { /*как его затемнить ОШИБКА*/
 background-image: url("../images/cover-trains.jpg");
 background-size: cover;
-width: 1184px;
-height: 740px;
-margin-top: 92px;
-margin-right: 48px;
-margin-left: 48px;
+width: 100%;
 display: flex;
 flex-direction: column;
 justify-content: center;
 position: relative;
+text-decoration: none;
+aspect-ratio: 1.6;
+max-width: 1184px;
+max-height: 740px;
 z-index: 0;
+}
 
-text-transform: uppercase;
+.cover__overplay::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0px;
+    left: 0px;
+    opacity: 0.3;
+    transition: 1s;
+    background-color: #2A2C2F;
+}
+
+.cover__overplay::after {
+opacity: 0.8;
+background-color: #2A2C2F;
+}
+
+.footer {
+border: 2px solid green;
+/*padding: 92px 48px 24px 48px;
+margin: 0px;
+max-width: 1184px;
+max-height: 18px;*/
+}
+.footer__container {
+border: 2px solid red;
+padding: 92px 48px 24px 48px;
+margin: 0px;
+max-width: 1184px;
+max-height: 18px;
+}
+.footer__links {
+display: flex;
+flex-direction: row;
+max-width: 651px;
+box-sizing: border-box;
+}
+.footer__link {
+/*position: absolute;
+width: 50px;
+height: 18px;*/
+padding-top: 0px;
+padding-right: 18px;
+padding-left: 0px;
+text-decoration: none;
+font-family: 'Inter';
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 18px;
+color: #FFFFFF;
+}
+.footer__link:last-of-type {
+    padding-right: 0px;
+}
+.footer__author {
+    position: relative;
+    width: 186px;
+    height: 16px;
+    margin: 0px;
+    padding-top: 0px;
+    padding-left: 533px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 16px;
+    text-align: right;
+    color: #FFFFFF;
 }
